project not finnished

--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -6,6 +6,7 @@ deep slate blue  #3D405B
 /*------------------------- SITE WIDE --------------------------*/
 
 * {
+    margin: 0;
     padding: 0;
     font-family: "Josefin Sans", sans-serif;
     box-sizing: border-box;
@@ -15,17 +16,13 @@ deep slate blue  #3D405B
 /*------------------------- HEADER --------------------------*/
 
 header {
-    display: block;
+    display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #1a1a1a;
     color: #ffffff;
-    margin: 0;
-}
 
-/*header {
-    display: block;
-}*/
+}
 
 .brand {
     display: flex;
@@ -44,6 +41,31 @@ header span {
 
     font-size: 1.2rem;
     color: #ffffff;
+}
+
+
+
+
+
+
+header .logo {
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 1.2em;
+    text-decoration: none;
+}
+
+header.sticky .logo {
+    color: #111;
+}
+
+header .logo span {
+    color: #e40000;
+}
+
+header .navigation {
+    position: relative;
+    display: flex;
 }
 
 
@@ -67,6 +89,9 @@ header span {
 
 
 /*------------------------- NAVIGATION --------------------------*/
+header {
+    display: block;
+}
 
 .logo {
     padding: 1rem;
@@ -81,6 +106,9 @@ header span {
 
 .navigation.show {
     display: block;
+
+    background-color: #2e2e2e;
+
 }
 
 .navigation ul {
@@ -123,90 +151,6 @@ h1 {
 
 /*------------------------- MAIN --------------------------*/
 
-.members-card {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: hsl(0, 17%, 93%);
-    padding: 1em;
-}
-
-
-.grid-view img {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, .5);
-    /* Right, Down, Blur, Color */
-    margin-top: 10px;
-}
-
-
-.grid-view {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center;
-
-}
-
-/* List view styles */
-.list-view {
-    display: flex;
-    flex-direction: column;
-}
-
-.list-view .members-card {
-    /* Item specific styles for list */
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-
-
-}
-
-.allbtn {
-    display: flex;
-    justify-items: center;
-    gap: 5px;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    color: #ffffff;
-    margin-top: 10px;
-
-}
-
-.allbtn button {
-    padding: 5px;
-    background-color: rgb(98, 98, 100);
-    color: #ffffff;
-    border-radius: 5px;
-}
-
-
-#view-toggle {
-    display: flex;
-
-}
-
-.list-view .members-card img {
-    display: none;
-}
-
-.list-view .members-card #memberlevel {
-    display: none;
-
-}
-
-#memberlevel {
-    padding: 10px;
-    margin-top: 10px;
-    background-color: rgb(98, 98, 100);
-    color: #ffffff;
-    border-radius: 10px;
-}
 
 /*------------------------- FOOTER --------------------------*/
 
@@ -222,7 +166,6 @@ footer {
 footer .socials {
     display: flex;
     justify-content: center;
-    align-items: center;
     gap: 1.5rem;
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
