--- a/finalproject/styles/form.css
+++ b/finalproject/styles/form.css
@@ -1,569 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Oswald";
-    scroll-behavior: smooth;
-}
-
-body{
-    min-height: 1000px;
-    background-color: #cbe7ba;
-
-}
-
-p{
-    font-weight: 300;
-    color: #111;
-}
-
-
-.banner{
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url("banner5.jpg");
-    background-size: cover;
-}
-
-
-.banner .content{
-    max-width: 100%;
-    text-align: center;
-}
-
-.banner .content h2{
-    font-size: 5em;
-    color: #fff;
-}
-
-.banner .content p{
-    font-size: 1.5em;
-    color: #fff;
-}
-
-.btn{
-    font-size: 1em;
-    color: #a0cf4f;
-    background: #e40000;
-    display: inline-block;
-    padding: 10px 30px;
-    margin-top: 20px;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 2px;
-    transition: 0.5s;
-}
-
-.btn:hover{
-    letter-spacing: 6px;
-}
-
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 40px 100px;
-    z-index: 10000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: 0.5s;
-}
-
-header .logo{
-    color: #a0cf4f;
-    font-weight: 700;
-    font-size: 2em;
-    text-decoration: none;
-}
-
-header.sticky{
-    background: #a0cf4f;
-    padding: 10px 100px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.05);
-}
-
-header.sticky .logo{
-    color: #111;
-}
-
-header .logo span{
-    color: #e40000;
-}
-
-header .navigation{
-    position: relative;
-    display: flex;
-}
-
-header .navigation li{
-    list-style: none;
-    margin-left: 30px;
-}
-
-header .navigation li a{
-text-decoration: none;
-color: #a0cf4f;
-font-weight: 500;
-}
-
-
-header.sticky .navigation li a{
-    color: #111;
-}
-
-header .navigation li a:hover{
-    color: #e40000;    
-}
-
-section{
-    padding: 100px;
-}
-
-.row{
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.row .col50{
-    position: relative;
-    width: 48%;
-}
-
-.titleText{
-    color: #111;
-    font-size: 2em;
-    font-weight: 300;
-}
-
-.titleText span{
-    color: #e40000;
-    font-weight: 700;
-    font-size: 1.5em;
-}
-
-.row .col50 .imgBx{
-    position: relative;
-    width: 100%;
-    /*min-height: 300px;*/
-    height: 100%;
-}
-
-.row .col50 .imgBx img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.title{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.menu .content{
-    display: flex;
-    justify-content: center;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    margin-top: 40px;
-}
-
-.menu .content .box{
-    width: 250px;
-    margin: 6px;
-    border: 5px solid #fff;
-    box-shadow: 0 5px 35px rgba(0,0,0,0.08);
-}
-
-.menu .content .box .imgBx{
-    position: relative;
-    width: 100%;
-    height: 250px;
-}
-
-.menu .content .box .imgBx img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.menu .content .box .text{
-padding: 15px 0 5px;
-
-}
-
-.menu .content .box .text h3{
-    font-weight: 400;
-    color: #111;
-}
-
-
-.expert .content{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin-top: 40px;
-}
-
-.expert .content .box{
-    margin: 15px;
-    width: 230px;
-}
-
-
-.expert .content .box .imgBx{
-    position: relative;
-    width: 100%;
-    height: 300px;
-}
-
-
-.expert .content .box .imgBx img{
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-.expert .content .box .imgBx .text{
-    padding: 15px 0 5px;
-}
-
-.expert .content .box .imgBx .text h3{
-    font-weight: 400;
-    color: #111;
-}
-
-.testimonial{
-    background: url(wooden.jpg);
-    background-size: cover;
-}
-
-.white .titleText, .white p{
-    color: #a0cf4f;
-}
-
-.testimonial .content{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-flex-direction: row;
-margin-top: 40px;
-}
-
-.testimonial .content .box{
-    width: 300px;
-    margin: 20px;
-    padding: 40px;
-    background: #d8f4a9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
-}
-
-.testimonial .content .box .imgBx{
-position: relative;
-width: 80px;
-height: 80px;
-margin-bottom: 20px;
-border-radius: 50px;
-overflow: hidden;
-    
-}
-
-.testimonial .content .box .imgBx img{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    object-fit: cover;   
-}
-
-.testimonial .content .box .text{
-    text-align: center;
-}
-
-.testimonial .content .box .text p{
-    color: #666;
-    font-style: italic;
-    font-size: 1.5em;
-}
-
-
-.testimonial .content .box .text h3{
-margin-top: 20px;
-color: #111;
-font-size: 1em;
-color: #e40000;
-font-weight: 600;
-}
-
-
-.contact{
-    background: url(tomato.jpg);
-    background-size: cover;
-}
-.contactForm{
-    padding: 75px 50px;
-    background: #d8f4a9;
-    box-shadow: 0 15px 50px rgba(0,0,0,0.1);
-    max-width: 500px;
-    margin-top: 50px;
-}
-
-.contactForm h3{
-    color: #111;
-    font-size: 1.2em;
-    margin-bottom: 20px;
-    font-weight: 500;
-}
-
-.contactForm .inputBox{
-    position: relative;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.contactForm .inputBox input,
-.contactForm .inputBox textarea{
-    width: 100%;
-    border: 1px solid #555;
-    padding: 10px;
-    color: #111;
-    outline: none;
-    font-size: 16px;
-    font-weight: 300;
-}
-
-
-.contactForm .inputBox input[type="submit"]{
-    font-size: 1em;
-    color: #a0cf4f;
-    background: #e40000;
-    display: inline-block;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 2px;
-    transition: 0.5s;
-    max-width: 100px;
-    font-weight: 500;
-    border: none;
-    cursor: pointer;
-}
-
-.copyrightText{
-    padding: 8px 40px;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.copyrightText p{
-    color: #333;
-}
-
-.copyrightText a{
-    color: #e40000;
-    font-weight: 500;
-    text-decoration: none;
-}
-
-
-
-
-.menu .title .content .box .text .intro{
-    height: 40px;
-    width: 240px;
-    padding: 5px;
-    box-sizing: border-box;
-    position: absolute;
-    background: rgb(27, 27, 27, .5);
-    color: white;
-    bottom: -1415px;
-    transition: .5s;
-}
-
-
-.menu .title .content .box .text .intro h1{
-    padding: 0px;
-    font-size: 25px;
-    text-align: center;
-}
-
-.menu .title .content .box .text .intro p{
-    font-size: 15px;
-    padding: 0px;
-    text-align: justify;
-    visibility: hidden;
-    opacity: 0;
-    color: #cbe7ba;
-}
-
-.menu .title .content .box .text .intro span{
-    font-weight: bold;
-    color: #e40000;
-}
-
-.menu .title .content .box .card:hover{
-    cursor: pointer;
-}
-
-
-
-
-.menu .title .content .box:hover .text .intro{
-    height: 230px;
-    bottom: -1395px;
-    background: rgb(27, 27, 27, .9);
-}
-
-.menu .title .content .box:hover .text .intro p{
-    opacity: 1;
-    visibility: visible;
-}
-
-.menu .title .content .box .text .intro1{
-    height: 40px;
-    width: 240px;
-    padding: 5px;
-    box-sizing: border-box;
-    position: absolute;
-    background: rgb(27, 27, 27, .5);
-    color: white;
-    bottom: -1707px;
-    transition: .5s;
-}
-
-
-.menu .title .content .box .text .intro1 h1{
-    padding: 0px;
-    font-size: 25px;
-    text-align: center;
-}
-
-.menu .title .content .box .text .intro1 p{
-    font-size: 15px;
-    padding: 0px;
-    text-align: justify;
-    visibility: hidden;
-    opacity: 0;
-    color: #a0cf4f;
-}
-
-.menu .title .content .box .text .intro1 span{
-    font-weight: bold;
-    color: #e40000;
-}
-
-
-
-.menu .title .content .box:hover .text .intro1{
-    height: 230px;
-    bottom: -1687px;
-    background: rgb(27, 27, 27, .9);
-}
-
-.menu .title .content .box:hover .text .intro1 p{
-    opacity: 1;
-    visibility: visible;
-}
-
-
-footer{
-    background-color: #A0CF4F;
-    margin-top: 30px;
-    padding: 20px;
-}
-
-footer p{
-    text-align: center;
-    margin: 0px;
-}
-
-#info{
-    font-size: 22px;
-    padding-bottom: 10px;
-    color: #ffd1dc;
-}
-
-#lastModified{
-    font-size: 16px;
-    color: yellow;
-}
-
-
-
-
-
-
-
-#tourgrid {
-  max-width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 1.5rem;
-  margin-bottom: 4em;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-
-#tourgrid {
-    margin-top: 0;
-    padding-top: 0;
-    
-}
-
-.tourimgs {
-    height: 200px;
-    width: 320px;
-}
-
-.tourimgs {
-  display: block;
-  margin-top: 1em;
-  filter: blur(0em);
-  transition: filter 0.5s;
-  list-style: none;
-
-}
-
-.tourdivs{
-    text-decoration: none;
-    list-style: none;
-    text-align: justify;
-}
-
-.contact .title h2{
-color: #111;
-}
-
-
-
 form {
     max-width: 650px;
     margin: 10px auto;
@@ -622,7 +56,7 @@ form .rating-options label span {
 form input[type="submit"] {
     margin-top: 20px;
     padding: 10px;
-    background-color: #a0cf4f;
+    background-color: #888a87;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -630,10 +64,10 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
-    background-color: #e40000;
+    background-color: #000000;
 }
 
-.optional{
+.optional {
     font-style: italic;
     font-size: 15px;
     color: #8811be;
@@ -646,289 +80,52 @@ form input[type="submit"]:hover {
     align-items: center;
     width: 160px;
     flex-direction: row-reverse;
-    justify-content: space-between;    
+    justify-content: space-between;
     position: relative;
     margin-top: 50px;
-  }
-  /* hide the inputs */
-  .star-rating input {
+}
+
+/* hide the inputs */
+.star-rating input {
     display: none;
-  }
-  /* set properties of all labels */
-  .star-rating > label {
+}
+
+/* set properties of all labels */
+.star-rating>label {
     width: 30px;
     height: 30px;
     font-family: Arial;
     font-size: 30px;
     transition: 0.2s ease;
     color: blueviolet;
-  }
-  /* give label a hover state */
-  .star-rating label:hover {
+}
+
+/* give label a hover state */
+.star-rating label:hover {
     color: #ff69b4;
     transition: 0.2s ease;
-  }
-  .star-rating label:active::before {
-    transform:scale(1.1);
-  }
-  
-  /* set shape of unselected label */
-  .star-rating label::before {
+}
+
+.star-rating label:active::before {
+    transform: scale(1.1);
+}
+
+/* set shape of unselected label */
+.star-rating label::before {
     content: '\2606';
     position: absolute;
     top: 0px;
     line-height: 26px;
-  }
-  /* set full star shape for checked label and those that come after it */
-  .star-rating input:checked ~ label:before {
-    content:'\2605';
-  }
-  
-  @-moz-document url-prefix() {
-    .star-rating input:checked ~ label:before {
-    font-size: 36px;
-    line-height: 21px;
-    }
-  }  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width:991px){
-    header,
-    header.sticky{
-        padding: 10px 20px;
-    }
-
-    header .navigation{
-        display: none;
-    }
-
-    header .navigation.active{
-        width: 100%;
-        height: calc(100% - 68px);
-        position: fixed;
-        top: 68;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background: #a0cf4f;
-    }
-
-    header .navigation li{
-        margin-left: 0;
-    }
-
-    header .navigation li a{
-        color: #111;
-        font-size: 1.6em;
-    }
-
-
-
-    .menuToggle{
-        position: relative;
-        width: 40px;
-        height: 40px;
-        background: url(menu.png);
-        background-size: 30px;
-        background-repeat: no-repeat;
-        background-position: center;
-        cursor: pointer;
-    }
-
-    .menuToggle.active{
-
-        background: url(close.png);
-        background-size: 25px;
-        background-repeat: no-repeat;
-        background-position: center;
-        cursor: pointer;
-    }
-
-    header.sticky .menuToggle{
-        filter: invert(1);
-
-    }
-    section{
-        padding: 20px;
-    }
-
-    .banner .content h3{
-        font-size: 3em;
-        color: #a0cf4f;
-    }
-
-    .row{
-        flex-direction: column;
-    }
-
-    .row .col50{
-        position: relative;
-        width: 100%;
-    }
-
-    .row .col50 .imgBx{
-        height: 300px;
-        margin-top: 20px;
-    }
-
-    .menu .content{
-        margin-top: 20px;
-    }
-
-    .menu .content .box{
-        margin: 10px;
-    }
-
-    .menu .content .box .imgBx{
-        height: 260px;
-    }
-
-    .title{
-        text-align: center;
-    }
-
-    .titleText{
-        font-size: 1.8em;
-        line-height: 1.5em;
-        margin-bottom: 15px;
-        font-weight: 300;
-    }
-
-    .testimonial .content .box{
-        margin: 10px;
-        padding: 20px;
-    }
-
-
-
 }
 
-@media (max-width:480px){
-    .banner .content h2{
-        font-size: 2.2em;
-        color: #a0cf4f;
-    }
-
-
+/* set full star shape for checked label and those that come after it */
+.star-rating input:checked~label:before {
+    content: '\2605';
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@-moz-document url-prefix() {
+    .star-rating input:checked~label:before {
+        font-size: 36px;
+        line-height: 21px;
+    }
+}
